chore: style root color 변수 추가 및 오타 수정

--- a/frontend/pages/mainPage/style.scss
+++ b/frontend/pages/mainPage/style.scss
@@ -8,9 +8,10 @@
   --purple-100: #bdb0ff;
   --purple-200: #7b61ff;
   --purple-300: #43319f;
-  --gray-100: #f7f8f9;
-  --gray-200: #e9ebee;
-  --gray-300: #c5c8ce;
-  --gray-400: #646f7c;
+  --grey-100: #f7f8f9;
+  --grey-200: #e9ebee;
+  --grey-300: #c5c8ce;
+  --grey-400: #828282;
+  --grey-500: #646f7c;
   --black: #191f28;
 }
