--- a/frontend/components/modal/alertModal.css
+++ b/frontend/components/modal/alertModal.css
@@ -11,16 +11,16 @@
   justify-content: center;
   align-items: center;
 
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 .modal__background {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 
   background-color: rgba(0, 0, 0, 0.5);
 }
