refactor: 모달 색상 css variable 사용

--- a/frontend/components/modal/alertModal.css
+++ b/frontend/components/modal/alertModal.css
@@ -31,7 +31,7 @@
   min-width: 400px;
   padding: 24px;
 
-  background-color: white;
+  background-color: var(--white);
   box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5), 0px 2px 4px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(4px);
 
@@ -43,7 +43,7 @@
   font-size: 18px;
   line-height: 21px;
 
-  color: #191f28;
+  color: var(--black);
 }
 
 .modal__button__wrapper {
