--- a/frontend/components/header/header.css
+++ b/frontend/components/header/header.css
@@ -7,6 +7,7 @@ header {
   justify-content: space-between;
   padding: 0 60px 0 80px;
   box-sizing: border-box;
+  box-shadow: 0px 1px 30px rgba(224, 224, 224, 0.3);
 }
 h1 {
   font-size: 32px;
