style: 버튼 컴포넌트 disabled 클래스에 대한 스타일 정의

--- a/frontend/components/button/button.css
+++ b/frontend/components/button/button.css
@@ -6,17 +6,23 @@
   border: none;
   cursor: pointer;
 }
+
 .custom-button.primary {
   background-color: var(--purple-200);
 }
 
-.custom-button.primary:hover {
+.custom-button.primary:not(.disabled):hover {
   background-color: var(--purple-300);
 }
 
-.custom-button.primary:active {
+.custom-button.primary:active,
+.custom-button.disabled {
   background-color: var(--purple-100);
   color: rgba(255, 255, 255, 0.4);
+}
+
+.custom-button.disabled {
+  cursor: default;
 }
 
 .custom-button.normal {
