feat: 카드 타이틀 없으면 등록 버튼 disabled 처리

--- a/frontend/components/card/card.css
+++ b/frontend/components/card/card.css
@@ -25,15 +25,7 @@
   color: var(--black);
 }
 
-.card__title__input {
-  font-weight: 700;
-  font-size: 20px;
-  line-height: 24px;
-
-  color: var(--black);
-}
-
-.card__title__input::placeholder {
+input.card__title::placeholder {
   color: var(--grey-400);
 }
 
