style: 카드 더블 클릭 시, 글씨 drag(select)되는 현상 수정

--- a/frontend/components/card/card.css
+++ b/frontend/components/card/card.css
@@ -9,6 +9,11 @@
   background: var(--white);
   border: 1px solid var(--grey-200);
   border-radius: 6px;
+
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .card__header {
