feat: notification 관련 이벤트 구현 (#39)
* feat: 알림 패널 open, close 이벤트 구현

* feat: 알림 패널 알림 리스트  데이터 맵핑 구현

* feat: body scroll 관리 util 함수 구현 및 적용

Co-authored-by: gyeongmin kim <a9120a@gamil.com>

--- a/frontend/components/notificationPanel/notificationPanel.css
+++ b/frontend/components/notificationPanel/notificationPanel.css
@@ -1,10 +1,17 @@
-.panel-wrapper {
+@import '../../styles/reset.css';
+@import '../../styles/style.css';
+
+.panel-wrapper.open {
   position: fixed;
+  display: block;
   width: 100vw;
   height: 100vh;
   left: 0;
   top: 0;
   background-color: rgba(0, 0, 0, 0.5);
+}
+.panel-wrapper {
+  display: none;
 }
 .panel-wrapper .panel {
   position: absolute;
