--- a/frontend/components/card/card.css
+++ b/frontend/components/card/card.css
@@ -1,8 +1,9 @@
 @import '../../styles/reset.css';
 
 .card {
+  cursor: pointer;
   padding: 16px;
-
+  width: 308px;
   min-height: 128px;
 
   background: var(--white);
@@ -87,4 +88,13 @@ textarea.card__desc {
   display: flex;
   justify-content: center;
   gap: 8px;
+}
+
+.place {
+  background-color: var(--grey-400);
+}
+
+.dragging {
+  box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5), 0px 2px 4px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(4px);
 }
