--- a/frontend/components/kanvanBoard/kanvanBoard.css
+++ b/frontend/components/kanvanBoard/kanvanBoard.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .kanvan {
   min-width: 374px;
   width: fit-content;
@@ -48,4 +52,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+}
+
+.dropzone {
+  border: 2px dashed var(--purple-200);
 }
