Feat: notification 패널 데이터 가공 및 애니메이션 구현 (#49)
* feat: 알림 패널 open, close 이벤트 구현

* feat: 알림 패널 알림 리스트  데이터 맵핑 구현

* feat: body scroll 관리 util 함수 구현 및 적용

* chore: css 파일 오타 수정

* feat: 알림 패널 애니메이션 적용 및 리스트 데이터 가공

* style: 키프레임 translateX vh에서 vw로 변경

* chore: 주석 제거

Co-authored-by: gyeongmin kim <a9120a@gamil.com>

--- a/frontend/components/notification/notification.css
+++ b/frontend/components/notification/notification.css
@@ -25,6 +25,11 @@
   font-weight: 400;
   color: var(--black);
 }
+.noti-contents .noti span {
+  font-weight: 700;
+  font-size: 16px;
+  padding: 0 3px;
+}
 .noti-contents .time {
   color: var(--grey-400);
   font-size: 14px;
