--- a/frontend/components/card/card.css
+++ b/frontend/components/card/card.css
@@ -1,19 +1,22 @@
 @import '../../styles/reset.css';
 
 .card {
-  cursor: pointer;
   padding: 16px;
-  width: 308px;
+  min-width: 308px;
   min-height: 128px;
 
   background: var(--white);
   border: 1px solid var(--grey-200);
   border-radius: 6px;
 
+  transition: all 0.3s ease;
+
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+
+  box-sizing: border-box;
 }
 .modify {
   border: 1px solid var(--purple-100);
@@ -110,6 +113,8 @@ textarea.card__desc:focus {
 }
 
 .dragging {
-  box-shadow: 0px 0px 4px rgba(204, 204, 204, 0.5), 0px 2px 4px rgba(0, 0, 0, 0.25);
-  backdrop-filter: blur(4px);
+  cursor: grabbing;
+
+  box-shadow: 0 30px 60px rgba(0, 0, 0, 0.3);
+  transform: scale(1.05);
 }
