--- a/frontend/components/kanvanBoard/kanvanBoard.css
+++ b/frontend/components/kanvanBoard/kanvanBoard.css
@@ -1,9 +1,7 @@
-* {
-  box-sizing: border-box;
-}
+@import '../../styles/reset.css';
 
 .kanvan {
-  min-width: 374px;
+  min-width: 340px;
   width: fit-content;
   padding: 20px 16px;
   display: flex;
@@ -12,6 +10,8 @@
 
   background: var(--grey-100);
   border-radius: 12px;
+
+  box-sizing: border-box;
 }
 
 .kanvan__header {
@@ -56,4 +56,8 @@
 
 .dropzone {
   border: 2px dashed var(--purple-200);
+}
+
+#kanvan__add-btn {
+  cursor: pointer;
 }
