--- a/frontend/components/header/header.css
+++ b/frontend/components/header/header.css
@@ -5,7 +5,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 60px 0 80px;
+  padding: 0 60px;
   box-sizing: border-box;
   box-shadow: 0px 1px 30px rgba(224, 224, 224, 0.3);
 }
