--- a/frontend/pages/mainPage/style.css
+++ b/frontend/pages/mainPage/style.css
@@ -6,16 +6,20 @@
   flex-direction: column;
 }
 .contents__container {
-  padding-left: 164px;
   margin-top: 28px;
+  margin-bottom: 100px;
+  padding: 0 60px;
   display: flex;
   gap: 42px;
   flex-direction: column;
+  align-items: center;
+  box-sizing: border-box;
 }
 .project-header {
   display: flex;
   flex-direction: column;
   gap: 25px;
+  width: 100%;
 }
 .project-header h1 {
   font-size: 32px;
