--- a/frontend/components/header/header.css
+++ b/frontend/components/header/header.css
@@ -1,14 +1,23 @@
 header {
   width: 100%;
   height: 112px;
+
+  display: flex;
+  justify-content: center;
+
   background-color: var(--white);
+  box-shadow: 0px 1px 30px rgba(224, 224, 224, 0.3);
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 1240px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0 60px;
   box-sizing: border-box;
-  box-shadow: 0px 1px 30px rgba(224, 224, 224, 0.3);
 }
+
 h1 {
   font-size: 32px;
   font-weight: 700;
