--- a/frontend/components/kanvanBoard/kanvanBoard.css
+++ b/frontend/components/kanvanBoard/kanvanBoard.css
@@ -3,7 +3,11 @@
 .kanvan {
   min-width: 340px;
   width: fit-content;
-  padding: 20px 16px;
+  padding: 0 16px 20px 16px;
+
+  height: 600px;
+  overflow-y: auto;
+
   display: flex;
   flex-direction: column;
   gap: 28px;
@@ -12,9 +16,14 @@
   border-radius: 12px;
 
   box-sizing: border-box;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.1);
 }
 
 .kanvan__header {
+  position: sticky;
+  top: 0;
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -22,6 +31,8 @@
   font-weight: 700;
   font-size: 18px;
   line-height: 26px;
+
+  background: var(--grey-100);
 }
 
 .kanvan__header__left {
