style: 카드 설명칸 pre-line

--- a/frontend/components/card/card.css
+++ b/frontend/components/card/card.css
@@ -49,6 +49,8 @@ input.card__title::placeholder {
   font-size: 16px;
   line-height: 19px;
 
+  white-space: pre-line;
+
   color: var(--grey-500);
 }
 
